# JogosQuaseImpossiveis

./: .gitignore  README.md
docs/: index.html
src/: Cargo.toml  main.rs
src/3d-models/: Vault1.fbx
src/JogosQuaseImpossiveis/: JogosQuaseImpossiveis.sln  Program.cs  _Imports.razor
src/JogosQuaseImpossiveis/JogosQuaseImpossiveis/: JogosQuaseImpossiveis.csproj  Program.cs
src/JogosQuaseImpossiveis/JogosQuaseImpossiveis/Components/: _Imports.razor
src/JogosQuaseImpossiveis/JogosQuaseImpossiveis/Properties/: launchSettings.json
src/JogosQuaseImpossiveis/Pages/: Home.razor
src/JogosQuaseImpossiveis/Properties/: launchSettings.json
src/JogosQuaseImpossiveis/wwwroot/: index.html  manifest.webmanifest
src/components/: enemy.rs
src/jogos_quase_impossiveis/src/: lib.rs
src/plugins/: custom_plugin.rs  mod.rs
src/resources/: game_config.rs  mod.rs  score.rs
src/states/: gameplay.rs  menu.rs  mod.rs
src/systems/: enemy_ai.rs  mod.rs  player_movement.rs  setup.rs
