[package]
name = "jogos_quase_impossiveis"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"

[[bin]]
name = "jogos_quase_impossiveis"
path = "main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
